backend/k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: hwijae/biday-admin-service:3.1
          ports:
            - containerPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
    - port: 9100
      targetPort: 9100
