backend/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: hwijae/biday-gateway-server:3.1
          ports:
            - containerPort: 8000
      serviceAccountName: gateway-sa

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: biday
spec:
  type: NodePort
  #type: LoadBalancer
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
