backend/k8s/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-deploy
  namespace: biday
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: volume-mongo
              mountPath: /data/db
      volumes:
        - name: volume-mongo
          persistentVolumeClaim:
            claimName: pvc-mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: biday
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
