backend/k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: hwijae/biday-order-service:3.1
          ports:
            - containerPort: 9103

---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - port: 9103
      targetPort: 9103
