backend/k8s/redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-deploy
  namespace: biday
spec:
  serviceName: redis 
  replicas: 1
  selector:
    matchLabels:
      app: redis 
  template:
    metadata:
      labels:
        app: redis 
    spec:
      containers:
        - name: redis 
          image: redis:alpine
          command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: pvc-redis
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: biday
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379 
      targetPort: 6379
