backend/k8s/user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
  namespace: biday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: hwijae/biday-user-service:3.1
          ports:
            - containerPort: 9106
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: biday
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 9106
      targetPort: 9106
